Fixed major offset bug. Still small issue with items shifting due to margins

--- a/style.css
+++ b/style.css
@@ -58,4 +58,5 @@ button {
 
 .animate--opacity.animate--transform {
   transition-property: transform, opacity;
+  transform-origin:center center;
 }
